--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "antd": "^5.23.3",
     "comptron": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
