--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.3",
     "comptron": "file:",
+    "localforage": "^1.10.0",
+    "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
